[package]
name = "dzn-rs"
description = "A library for dealing with DZN files used in the MiniZinc language."
version = "0.2.2"
edition = "2021"
authors = ["Maarten Flippo"]
license = "MIT"
documentation = "https://docs.rs/dzn-rs"
repository = "https://github.com/maartenflippo/dzn-rs"

[dependencies]
proptest = "1.4.0"
thiserror = "1.0.60"
winnow = "0.6.20"
